[1.2.2]
- Updated to Steamworks SDK v1.35.
- Added buffer validation check to SteamUtils.getImageRGBA().
- Added SteamMatchmaking interface, implementing most lobby functions.
- Added SteamMatchmakingTestApp.
- API change: matchmaking added callback SteamFriendsCallback.onGameLobbyJoinRequested().

[1.2.1]
- Added UserStatsStored, UserAchievementStored callbacks.
- Added a few SteamApps utility functions.

[1.2.0]
- Prebuilt libraries now compiled with Steamworks SDK v1.34.
- Native code generator moved to separate sub-project. Removes runtime dependency on gdx-jnigen.
- Moved documentation to GitHub pages: http://code-disaster.github.io/steamworks4j/
- Added SteamUGC.getItemInstallInfo(), getItemDownloadInfo(), requestUGCDetails(), createQueryUGCDetailsRequest().
- Added warning message hook.
- Added SteamAPI.restartAppIfNecessary().
- Added auth session API to SteamUser. This also adds a SteamUserCallback interface.
- Added SteamHTTP interface
- Added SteamHTTPTestApp which calls some basic Steam Web API functions.
- API change: moved some enums from SteamGameServer to SteamAuth.

[1.1.0]
- Prebuilt libraries now compiled with Steamworks SDK v1.33b.
- Added SteamUserStats.findOrCreateLeaderboard(), getLeaderboardSortMethod(), getLeaderboardDisplayType().
- Added SteamUGC.createQueryAllUGCRequest(), subscribeItems(), unsubscribeItems(), getNumSubscribedItems(), getSubscribedItems(). [thanks, titoasty]
- Added SteamFriends API to retrieve avatar images.
- Added SteamFriends API to enumerate friend lists and query persona states.
- Added SteamGameServer, SteamGameServerStats and SteamNetworking APIs. [initially added by Francisco "Franz" Bischoff]
- Updated test application to prepare for more (isolated) tests. SteamAPITestApplication is now called SteamClientAPITestApp.
- Added SteamNetworkingTestApp for testing P2P networking functions.
- Removed static native callback objects. They are now created and stored per instance of each interface.